# semantic_search_opensearch_knn

./: README.md  dashboard.txt  pyproject.toml
docker/: opensearch-dev-compose.yml
src/: db_provider.py  main.py  temp.py
