[project]
name = "asset-fetch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "opensearch-py>=3.0.0",
]

[project.scripts]
example-pkg = "asset_fetch:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
namespace = true

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.12",
]
